Minor adjustment