@@ -5,6 +5,7 @@ package oracle.weblogic.kubernetes.utils;
 
 import java.time.OffsetDateTime;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
@@ -137,7 +138,7 @@ public class CommonMiiTestUtils {
       int replicaCount
   ) {
     return createMiiDomainAndVerify(domainNamespace, domainUid, imageName, 
-        adminServerPodName, managedServerPrefix, replicaCount, List.of("cluster-1"), false, null);
+        adminServerPodName, managedServerPrefix, replicaCount, Arrays.asList("cluster-1"), false, null);
   }
 
   /**
@@ -909,7 +910,7 @@ public class CommonMiiTestUtils {
 
     StringBuffer curlString = new StringBuffer("curl --user "
         + ADMIN_USERNAME_DEFAULT + ":" + ADMIN_PASSWORD_DEFAULT + " ");
-    curlString.append("http://").append(hostAndPort)
+    curlString.append("http://" + hostAndPort)
         .append(resourcePath)
         .append("/")
         .append(" --silent --show-error ");
@@ -1090,13 +1091,13 @@ public class CommonMiiTestUtils {
                       .addContainersItem(
                           createfixPVCOwnerContainer(pvName,
                               "/shared")) // mounted under /shared inside pod
-                      .volumes(List.of(
+                      .volumes(Arrays.asList(
                           new V1Volume()
                               .name(pvName)
                               .persistentVolumeClaim(
                                   new V1PersistentVolumeClaimVolumeSource()
                                       .claimName(pvcName))))
-                      .imagePullSecrets(List.of(
+                      .imagePullSecrets(Arrays.asList(
                           new V1LocalObjectReference()
                               .name(TEST_IMAGES_REPO_SECRET_NAME)))))); // this secret is used only for non-kind cluster
 
@@ -1139,7 +1140,8 @@ public class CommonMiiTestUtils {
         commandToExecuteInsidePod, podName, domainNamespace);
     V1Pod serverPod = assertDoesNotThrow(() ->
             Kubernetes.getPod(domainNamespace, null, podName),
-        String.format("Could not get the server Pod %s in namespace %s", podName, domainNamespace));
+        String.format("Could not get the server Pod %s in namespace %s",
+            podName, domainNamespace));
 
     ExecResult result = assertDoesNotThrow(() -> Kubernetes.exec(serverPod, null, true,
         "/bin/sh", "-c", commandToExecuteInsidePod),
@@ -1397,14 +1399,16 @@ public class CommonMiiTestUtils {
     }
     String imagePullPolicy = "IfNotPresent";
     // create patch string
-    StringBuffer patchStr = new StringBuffer("[").append("{\"op\":  \"").append(addOrReplace).append("\",")
+    StringBuffer patchStr = new StringBuffer("[")
+        .append("{\"op\":  \"" + addOrReplace + "\",")
         .append(" \"path\": \"/spec/configuration/model")
         .append("/auxiliaryImages/")
         .append(auxiliaryImageIndex)
         .append("\", ")
         .append("\"value\":  {\"image\": \"")
         .append(auxiliaryImageName)
-        .append("\", ").append("\"imagePullPolicy\": \"").append(imagePullPolicy).append("\" ")
+        .append("\", ")
+        .append("\"imagePullPolicy\": \"" + imagePullPolicy + "\" ")
         .append("\"}}]");
 
     logger.info("Patch domain with auxiliary image patch string: " + patchStr);
